Zend/tests/traits/language011.phpt
@@ -1,5 +1,5 @@
 --TEST--
-Aliasing leading to conflict should result in error message
+Aliasing on conflicting method should not cover up conflict.
 --FILE--
 <?php
 error_reporting(E_ALL);
@@ -27,4 +27,4 @@ $o->sayWorld();
 
 ?>
 --EXPECTF--	
-Fatal error: Trait method sayWorld has not been applied, because there are collisions with other trait methods on MyClass in %s on line %d
+Fatal error: Trait method sayHello has not been applied, because there are collisions with other trait methods on MyClass in %s on line %d
